Download bootstrap4, added bootstrap 4 into global styles

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,7 @@
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <div>
-  <side-nav>
-  </side-nav>
-  <content-manager>
-  </content-manager>
+  <side-nav></side-nav>
+  <content-manager></content-manager>
 </div>
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
