Hoverable styles, clicked css, fa icons

--- a/src/app/side-nav/side-nav.component.scss
+++ b/src/app/side-nav/side-nav.component.scss
@@ -6,3 +6,15 @@ ul, .card {
 ul {
   color: white;
 }
+
+.cursor-pointer{
+  cursor: pointer;
+}
+
+.selected {
+  background-color: #2f4255;
+}
+
+.nav-item:hover {
+  background-color: #2f4255;
+}
