--- a/src/app/side-nav/side-nav.component.html
+++ b/src/app/side-nav/side-nav.component.html
@@ -1,9 +1,25 @@
 <div class="font-italic font-weight-bold">
-  Spectrum >>>
+  Spectrum <img />
 </div>
 <ul class="nav nav-pills flex-column">
-  <li *ngFor="let option of options; let i = index" class="nav-item card">
-    <div class="nav-link" (click)="toggleDropdown(i)">{{option.name}}</div>
+  <li *ngFor="let option of options; let i = index"
+      class="nav-item card cursor-pointer" [class.selected]="option.isExpanded">
+    <div class="nav-link" (click)="toggleDropdown(i)">
+      <div class="d-flex justify-content-between">
+        <div>
+          <fa-icon *ngIf="option.faIcon"
+                   [icon]="option.faIcon"
+                   [fixedWidth]="true"
+                   [classes]="['mr-2']"
+          >
+          </fa-icon>
+          {{option.name}}
+        </div>
+        <fa-icon [icon]="option.isExpanded ? minusIcon : plusIcon"
+                 [fixedWidth]="true">
+        </fa-icon>
+      </div>
+    </div>
     <ul class="nav nav-pills flex-column" [class.d-none]="!option.isExpanded">
       <li *ngFor="let sub of option.subOptions" class="nav-item card pl-3">
         <div class="nav-link">{{sub}}</div>
