--- a/src/app/side-nav/side-nav.component.html
+++ b/src/app/side-nav/side-nav.component.html
@@ -3,15 +3,15 @@
 </div>
 <ul class="nav nav-pills flex-column">
   <li *ngFor="let option of options; let i = index"
-      class="nav-item card cursor-pointer" [class.selected]="option.isExpanded">
+      class="nav-item card cursor-pointer"
+      [class.selected]="option.isExpanded">
     <div class="nav-link" (click)="toggleDropdown(i)">
       <div class="d-flex justify-content-between">
         <div>
           <fa-icon *ngIf="option.faIcon"
                    [icon]="option.faIcon"
                    [fixedWidth]="true"
-                   [classes]="['mr-2']"
-          >
+                   [classes]="['mr-2']">
           </fa-icon>
           {{option.name}}
         </div>
