--- a/src/app/side-nav/side-nav.component.html
+++ b/src/app/side-nav/side-nav.component.html
@@ -1,45 +1,51 @@
-<div class="d-flex justify-content-between py-2 pl-2 nav-brand-color text-white">
+<div class="d-flex py-2 pl-2 nav-brand-color text-white"
+     [class.justify-content-between]="!largeMenuCondensed">
   <h3 class="font-italic font-weight-bold nav-brand-letter m-0">
     Spectrum<img *ngIf="!largeMenuCondensed" class="nav-brand-img" src="assets/logo.png"/>
   </h3>
   <div class="mr-2 my-auto d-md-none">
-    <span class="border border-white rounded py-1 px-2"
+    <span class="border border-white rounded py-1 px-2 cursor-pointer"
           [class.hamburger-expanded]="smallMenuExpanded"
           (click)="smallMenuExpanded = !smallMenuExpanded">
       <fa-icon [icon]="barsIcon"></fa-icon>
     </span>
   </div>
   <div class="mr-2 my-auto d-none d-md-block">
-    <span class="py-1 px-2"
+    <span class="py-1 px-2 cursor-pointer"
           (click)="largeMenuCondensed = !largeMenuCondensed">
       <fa-icon [icon]="largeMenuCondensed ? rightIcon : leftIcon" size="2x"></fa-icon>
     </span>
   </div>
 </div>
-<ul class="nav nav-pills flex-column text-white" [class.menu-hidden]="!smallMenuExpanded">
-  <li *ngFor="let option of options; let i = index"
-      class="nav-item card cursor-pointer">
-    <div class="nav-link pl-2" (click)="toggleDropdown(i)">
-      <div class="d-flex justify-content-between">
-        <div>
-          <fa-icon *ngIf="option.faIcon"
-                   [icon]="option.faIcon"
-                   [fixedWidth]="true"
-                   [classes]="['mr-2']">
-          </fa-icon>
-          <span [class.menu-condensed]="largeMenuCondensed">{{option.name}}</span>
-        </div>
-        <div [class.menu-condensed]="largeMenuCondensed">
-          <fa-icon [icon]="option.isExpanded ? minusIcon : plusIcon"
-                   [fixedWidth]="true">
-          </fa-icon>
+<div [class.d-flex]="largeMenuCondensed">
+  <ul class="nav flex-column text-white"
+      [class.menu-hidden]="!smallMenuExpanded" [class.condense]="largeMenuCondensed">
+    <li *ngFor="let option of options; let i = index"
+        class="nav-item card cursor-pointer">
+      <div class="nav-link" [class.pl-2]="!largeMenuCondensed" (click)="toggleDropdown(i)">
+        <div class="d-flex justify-content-between">
+          <div>
+            <fa-icon *ngIf="option.faIcon"
+                     [icon]="option.faIcon"
+                     [fixedWidth]="true">
+            </fa-icon>
+            <span class="ml-2" [class.menu-condensed]="largeMenuCondensed">{{option.name}}</span>
+          </div>
+          <div [class.menu-condensed]="largeMenuCondensed">
+            <fa-icon [icon]="option.isExpanded ? minusIcon : plusIcon"
+                     [fixedWidth]="true">
+            </fa-icon>
+          </div>
         </div>
       </div>
-    </div>
-    <ul class="nav nav-pills flex-column" [class.d-none]="!option.isExpanded">
-      <li *ngFor="let sub of option.subOptions" class="nav-item card pl-3 nav-sub-option">
-        <div class="nav-link">{{sub}}</div>
-      </li>
-    </ul>
-  </li>
-</ul>
+      <ul class="nav nav-pills flex-column"
+          [class.d-none]="!option.isExpanded"
+          [class.d-md-none]="largeMenuCondensed">
+        <li *ngFor="let sub of option.subOptions" class="nav-item card pl-3 nav-sub-option">
+          <div class="nav-link">{{sub}}</div>
+        </li>
+      </ul>
+    </li>
+  </ul>
+</div>
+
