--- a/src/app/side-nav/side-nav.component.scss
+++ b/src/app/side-nav/side-nav.component.scss
@@ -61,3 +61,10 @@ div.nav-link:hover {
 .icon-subtext {
   font-size: .75rem;
 }
+
+div[tabindex='0']:focus,
+span[tabindex='0']:focus,
+li[tabindex='0']:focus {
+  outline: orange solid 4px;
+  outline-offset: -4px;
+}
