--- a/src/app/side-nav/side-nav.component.html
+++ b/src/app/side-nav/side-nav.component.html
@@ -8,7 +8,6 @@
     <span class="border border-white rounded py-1 px-2 cursor-pointer"
           [class.hamburger-expanded]="smallMenuExpanded"
           (click)="smallMenuExpanded = !smallMenuExpanded"
-          (select)="smallMenuExpanded = !smallMenuExpanded"
           tabindex="0"
           role="button"
           appAriaSelect
@@ -16,14 +15,14 @@
       <fa-icon [icon]="barsIcon"></fa-icon>
     </span>
   </div>
-  <div class="mr-2 my-auto d-none d-md-block">
-    <span class="py-1 px-2 cursor-pointer"
+  <div class="mx-2 my-auto menu-hidden">
+    <span class="cursor-pointer"
           (click)="largeMenuCondensed = !largeMenuCondensed"
           tabindex="0"
           role="button"
           appAriaSelect
           (ariaSelect)="largeMenuCondensed = !largeMenuCondensed">
-      <fa-icon [icon]="largeMenuCondensed ? rightIcon : leftIcon" size="2x"></fa-icon>
+      <fa-icon [icon]="largeMenuCondensed ? rightIcon : leftIcon" size="2x" [fixedWidth]="true"></fa-icon>
     </span>
   </div>
 </div>
