Sidenav: alt text

--- a/src/app/side-nav/side-nav.component.html
+++ b/src/app/side-nav/side-nav.component.html
@@ -2,7 +2,10 @@
 <div class="d-flex py-2 pl-2 nav-brand-color text-white justify-content-between-max-sm"
      [class.justify-content-md-between]="!largeMenuCondensed">
   <h3 class="font-italic font-weight-bold nav-brand-letter m-0">
-    Spectrum<img [class.d-md-none]="largeMenuCondensed" class="nav-brand-img" src="assets/logo.png"/>
+    Spectrum<img [class.d-md-none]="largeMenuCondensed"
+                 class="nav-brand-img"
+                 src="assets/logo.png"
+                 alt="Extending horizontal stripes, right wing."/>
   </h3>
   <div class="mr-2 my-auto d-md-none">
     <span class="border border-white rounded py-1 px-2 cursor-pointer"
