--- a/src/app/side-nav/side-nav.component.scss
+++ b/src/app/side-nav/side-nav.component.scss
@@ -37,6 +37,19 @@ div.nav-link:hover {
   background-color: $nav-item-color-darker;
 }
 
+.nav-title-bg {
+  background-color: $nav-title-color
+}
+
+.special-icon {
+  background-color: $nav-custom-icon-color;
+}
+
+.special-icon,
+.icon-subtext {
+  font-size: .75rem;
+}
+
 // Responsiveness
 .menu-hidden {
   @include hide-in-mobile-screen();
