--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<div>
+<div class="overflow-hidden h-100 w-100">
   <side-nav></side-nav>
 
   <content-manager></content-manager>
